# simple_json_flatten_py

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
flatten_json.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flatten_json_py/: flatten_json.py  simple_flatten_json.py
test/: flatten_test.py
test/input/: test1.json  test2.json  test3.json
test/output/: result1.json  result2.json  result3.json
