# setup.cfg file at the root directory
[metadata]
name = flatten_json
version = 0.0.1
author = Abhishek Thakur
description = For flattening complex JSONs or JSON array
long_description = file README.md
url = https://github.com/at-75
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7, <4
install_package_data= True