# setup.cfg file at the root directory
[metadata]
name = simple_flatten_json
version = 0.0.7
author = Abhishek Thakur
description = For flattening complex JSONs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/at-75/simple_json_flatten_py
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7, <4
install_package_data= True
